# gst

./: README.md  flake.nix  meson.build
src/: language_descriptor.hpp  lexer.hpp  meson.build  regex.hpp
src/math/: fraction.hpp
src/parser/: dice.hpp  math.hpp  math_function.hpp  parse_node.hpp  parser.hpp  regex.hpp
src/parser/prebuilt/arithmetic/: by.hpp  divided_by.hpp  minus.hpp  number.hpp  par_close.hpp  par_open.hpp  plus.hpp  power.hpp  root.hpp
src/parser/prebuilt/dice_roller/: dice.hpp
src/parser/prebuilt/math_function/: base_node.hpp  by.hpp  divided_by.hpp  exceptions.hpp  minus.hpp  number.hpp  par_close.hpp  par_open.hpp  plus.hpp  power.hpp  root.hpp  unknown.hpp
src/parser/prebuilt/regex/: alphanumeric_latin.hpp  alternation.hpp  any.hpp  at_least_one.hpp  character.hpp  digit.hpp  minus.hpp  non_digit.hpp  optional.hpp  par_close.hpp  root.cpp  root.hpp  round_par_open.hpp  square_par_open.hpp  star.hpp
src/parser/tokenizer/: exact_tokenizer.hpp  regex_tokenizer.hpp
test/: algorithm.cpp  concepts.cpp  math.cpp  meson.build  parse_tree.cpp
